fix: z-index for fab-button

--- a/src/app/members/members-list/members-list.component.css
+++ b/src/app/members/members-list/members-list.component.css
@@ -6,6 +6,7 @@ table {
   position: fixed;
   right: 24px;
   bottom: 24px;
+  z-index: 999;
 }
 
 .mat-toolbar {
